--- a/SwiftySend/SwiftySend.csproj
+++ b/SwiftySend/SwiftySend.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Core\MemberInfoExtended.cs" />
     <Compile Include="Core\SerializationNode.cs" />
     <Compile Include="Helpers\CollectionExtension.cs" />
+    <Compile Include="Helpers\SharedFunctionsAggregator.cs" />
     <Compile Include="Helpers\StructureAnalyzerHelper.cs" />
     <Compile Include="ReaderWriter\SwiftySendXmlReader.cs" />
     <Compile Include="ReaderWriter\SwiftySendXmlWriter.cs" />
