Add ability to handle nodes reordering in xml

--- a/SwiftySend/SwiftySend.csproj
+++ b/SwiftySend/SwiftySend.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -48,8 +48,8 @@
     <Compile Include="Helpers\CollectionExtension.cs" />
     <Compile Include="Helpers\SharedFunctionsAggregator.cs" />
     <Compile Include="Helpers\StructureAnalyzerHelper.cs" />
-    <Compile Include="ReaderWriter\SwiftySendXmlReader.cs" />
-    <Compile Include="ReaderWriter\SwiftySendXmlWriter.cs" />
+    <Compile Include="ReaderWriter\SwiftyReader.cs" />
+    <Compile Include="ReaderWriter\SwiftyWriter.cs" />
     <Compile Include="SerializableStructureBuilder.cs" />
     <Compile Include="SwiftySendSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
